--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,6 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -215,14 +214,19 @@ BP_ViewPoint_C=StaticMeshComponent.Collision.Collision,
 BP_PowerupSpeed_Pickup_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SphereComponent=
 BP_CollectibleSphere_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
-SceneComponent=
+SceneComponent=BoxComponent.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 TargetPoint=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
-BoxComponent=BoxComponent.Physics.ConstraintsGroup,
+BoxComponent=
 BP_SpawnPoint_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
-BP_Sky_Sphere_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
+BP_Sky_Sphere_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 ShapeComponent=
 PrimitiveComponent=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Actor=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+BP_FPSExtractionZone_C=BoxComponent.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+CapsuleComponent=
+BrushComponent=
+VolumetricLightmapDensityVolume=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+PlayerStart=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
 
 [EditorStartup]
 LastLevel=/Game/Maps/TestLevel
@@ -1332,7 +1336,7 @@ BP_TestPickupPowerup_C.Input=True
 DecalComponent.Variable=True
 DecalComponent.TransformCommon=True
 DecalComponent.Sockets=True
-DecalComponent.Decal=False
+DecalComponent.Decal=True
 DecalComponent.Rendering=True
 DecalComponent.ComponentTick=True
 DecalComponent.Tags=True
@@ -1609,10 +1613,91 @@ ProgressBar.Performance=True
 ProgressBar.Clipping=True
 ProgressBar.Navigation=True
 ProgressBar.Localization=True
+BP_FPSExtractionZone_C.Decal=True
+DecalComponent.LOD=False
+SpotLightComponent.Variable=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Sockets=True
+SpotLightComponent.Light=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.ComponentTick=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.RayTracing=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.Tags=True
+SpotLightComponent.ComponentReplication=True
+SpotLightComponent.Cooking=True
+SpotLightComponent.Events=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+VolumetricLightmapDensityVolume.TransformCommon=True
+VolumetricLightmapDensityVolume.VolumetricLightmapDensityVolume=True
+VolumetricLightmapDensityVolume.BrushSettings=True
+VolumetricLightmapDensityVolume.Replication=True
+VolumetricLightmapDensityVolume.Actor=True
+ARSkyLight.Actor=True
+ARSkyLight.Cooking=True
+ARSkyLight.Tags=True
+ARSkyLight.SkyLight=True
+ARSkyLight.RayTracing=True
+ARSkyLight.AtmosphereAndCloud=True
+ARSkyLight.DistanceFieldAmbientOcclusion=True
+ARSkyLight.Rendering=True
+ARSkyLight.Light=True
+ARSkyLight.TransformCommon=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.RayTracing=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.06.12-19.47.13
-TheMaze.LastCompileMethod=External
+TheMaze.TimeStamp=2021.06.13-11.50.00
+TheMaze.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2634,17 +2719,17 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
+Object=
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-ActorComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-MaterialEditorInstanceConstant=
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
@@ -2653,16 +2738,16 @@ Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovere
 Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
 SphereComponent=
-ShapeComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent=
 BP_PowerupSpeed_Pickup_C="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
 SPowerUpActor="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
-PointLightComponent="\"Object.Light.LightColor\" "
-LocalLightComponent="\"Object.Light.LightColor\" "
-LightComponent="\"Object.Light.LightColor\" "
-LightComponentBase="\"Object.Light.LightColor\" "
+PointLightComponent=
+LocalLightComponent=
+LightComponent=
+LightComponentBase=
 WBP_PowerupCountdownText_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
@@ -2672,7 +2757,7 @@ BackgroundBlur="\"Object.Render Transform.RenderTransform\" \"Object.Render Tran
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_Crosshair_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-BoxComponent="\"Object.Collision.BodyInstance\" "
+BoxComponent=
 WBP_Credits_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_Purpose_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
@@ -2683,6 +2768,10 @@ EditableTextBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Tra
 WBP_GameComplete_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 ProgressBar="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+SpotLightComponent=
+VolumetricLightmapDensityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2699,6 +2788,15 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
+RecentlyPlaced=/Script/AugmentedReality.ARSkyLight;
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.VolumetricLightmapDensityVolume;/Engine/Transient.ActorFactoryBoxVolume_21
+RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
+RecentlyPlaced=/Script/Engine.VolumetricCloud;/Engine/Transient.ActorFactoryVolumetricCloud_0
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Game/Powerups/BP_PowerupSpeed_Pickup.BP_PowerupSpeed_Pickup;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Powerups/BP_Powerup_Speed.BP_Powerup_Speed;
@@ -2710,37 +2808,28 @@ RecentlyPlaced=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter;
 RecentlyPlaced=/Game/Blueprints/BP_FPSExtractionZone.BP_FPSExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_Interactable.BP_Interactable;
 RecentlyPlaced=/Game/Blueprints/BP_ViewPoint.BP_ViewPoint;
-RecentlyPlaced=/Script/TheMaze.FPSExtractionZone;
-RecentlyPlaced=/Script/TheMaze.ExtractionZone;
-RecentlyPlaced=/Game/Blueprints/BP_ExtractionZone.BP_ExtractionZone;
-RecentlyPlaced=/Game/Materials/BP_CharacterMaterial.BP_CharacterMaterial;
-RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
-RecentlyPlaced=/Game/Materials/BP_FloorMaterialInstance.BP_FloorMaterialInstance;
-RecentlyPlaced=/Game/Materials/BP_CharacterMaterialInstance.BP_CharacterMaterialInstance;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem1=/Game/Blueprints/BP_CollectibleSphere
-MRUItem2=/Game/Blueprints/BP_CFPSCharacter
-MRUItem3=/Game/Maps/TestLevel
-MRUItem4=/Game/Maps/MainMenu
-MRUItem5=/Game/Blueprints/WBP_PauseMenu
-MRUItem6=/Game/Blueprints/WBP_GameOver1
-MRUItem7=/Game/Blueprints/BP_MazeGameMode2
-MRUItem8=/Game/Blueprints/WBP_MainMenu
-MRUItem9=/Game/Blueprints/WBP_Purpose
-MRUItem10=/Game/Blueprints/WBP_Crosshair
-MRUItem11=/Game/Blueprints/WBP_GameComplete
-MRUItem12=/Game/Blueprints/WBP_Credits
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Blueprints/WBP_GameOver
-MRUItem15=/Game/Blueprints/WBP_PowerupCountdownText
-MRUItem16=/Game/Powerups/BP_Powerup_Countdown
-MRUItem17=/Game/Maps/PC_MainMenu
-MRUItem18=/Game/Powerups/BP_Powerup_Speed
-MRUItem19=/Game/Powerups/BP_PowerupSpeed_Pickup
+MRUItem0=/Game/Powerups/BP_Powerup_Countdown
+MRUItem1=/Game/Materials/M_SpawnBox_Inst
+MRUItem2=/Game/Maps/TestLevel
+MRUItem3=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem4=/Game/Blueprints/BP_CFPSCharacter
+MRUItem5=/Game/Blueprints/BP_CollectibleSphere
+MRUItem6=/Game/Maps/MainMenu
+MRUItem7=/Game/Blueprints/WBP_PauseMenu
+MRUItem8=/Game/Blueprints/WBP_GameOver1
+MRUItem9=/Game/Blueprints/BP_MazeGameMode2
+MRUItem10=/Game/Blueprints/WBP_MainMenu
+MRUItem11=/Game/Blueprints/WBP_Purpose
+MRUItem12=/Game/Blueprints/WBP_Crosshair
+MRUItem13=/Game/Blueprints/WBP_GameComplete
+MRUItem14=/Game/Blueprints/WBP_Credits
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem16=/Game/Blueprints/WBP_GameOver
+MRUItem17=/Game/Blueprints/WBP_PowerupCountdownText
+MRUItem18=/Game/Maps/PC_MainMenu
+MRUItem19=/Game/Powerups/BP_Powerup_Speed
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2789,6 +2878,7 @@ MRUItem19=/Game/Powerups/BP_PowerupSpeed_Pickup
 /Game/Blueprints/WBP_Credits.WBP_Credits=0
 /Game/Blueprints/WBP_PauseMenu.WBP_PauseMenu=0
 /Game/Blueprints/WBP_GameOver1.WBP_GameOver1=1
+/Game/Materials/M_SpawnBox_Inst.M_SpawnBox_Inst=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2924,12 +3014,12 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
-PrimType=0
+PrimType=1
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
