Game menu improved

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -222,11 +222,15 @@ BP_Sky_Sphere_C=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpee
 ShapeComponent=
 PrimitiveComponent=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Actor=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-BP_FPSExtractionZone_C=BoxComponent.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+BP_FPSExtractionZone_C=
 CapsuleComponent=
 BrushComponent=
 VolumetricLightmapDensityVolume=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 PlayerStart=BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,
+K2Node_VariableGet=BoxComponent.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+FPSExtractionZone=
+WBP_Crosshair_C=
+PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Physics.ConstraintsGroup,BP_PowerupSpeed_Pickup_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/TestLevel
@@ -1694,6 +1698,32 @@ RectLight.RayTracing=True
 RectLight.Tags=True
 RectLight.Cooking=True
 RectLight.Actor=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Filter=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.Actor=True
+BP_FPSExtractionZone_C.Default=True
+BP_PoitsLeft_C.Appearance=True
+BP_PoitsLeft_C.Designer=True
+BP_PoitsLeft_C.Input=True
+BP_PoitsLeft_C.Interaction=True
+BP_PoitsLeft_C.Performance=True
+BP_PoitsLeft_C.Layout=True
+BP_PoitsLeft_C.Behavior=True
+BP_PoitsLeft_C.Render Transform=True
+BP_PoitsLeft_C.Accessibility=True
+BP_PoitsLeft_C.Clipping=True
+BP_PoitsLeft_C.Navigation=True
+BP_PoitsLeft_C.Localization=True
 
 [ModuleFileTracking]
 TheMaze.TimeStamp=2021.06.13-11.50.00
@@ -2720,7 +2750,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -2734,8 +2764,8 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" 
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
@@ -2744,17 +2774,17 @@ SphereComponent=
 ShapeComponent=
 BP_PowerupSpeed_Pickup_C="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
 SPowerUpActor="\"Object.Components.SphereComp.Object.Collision.BodyInstance\" "
-PointLightComponent=
-LocalLightComponent=
-LightComponent=
-LightComponentBase=
+PointLightComponent="\"Object.Light.LightColor\" "
+LocalLightComponent="\"Object.Light.LightColor\" "
+LightComponent="\"Object.Light.LightColor\" "
+LightComponentBase="\"Object.Light.LightColor\" "
 WBP_PowerupCountdownText_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 BackgroundBlur="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_Crosshair_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 BoxComponent=
@@ -2772,6 +2802,9 @@ SpotLightComponent=
 VolumetricLightmapDensityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+WorldSettings="\"Object.Lightmass.LightmassSettings\" "
+Info=
+BP_PoitsLeft_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2788,6 +2821,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/powerdown_01.powerdown_01;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
@@ -2807,29 +2841,28 @@ RecentlyPlaced=/Game/Powerups/BP_TestPickupPowerup.BP_TestPickupPowerup;
 RecentlyPlaced=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter;
 RecentlyPlaced=/Game/Blueprints/BP_FPSExtractionZone.BP_FPSExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_Interactable.BP_Interactable;
-RecentlyPlaced=/Game/Blueprints/BP_ViewPoint.BP_ViewPoint;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_Powerup_Countdown
-MRUItem1=/Game/Materials/M_SpawnBox_Inst
-MRUItem2=/Game/Maps/TestLevel
-MRUItem3=/Game/Blueprints/BP_FPSExtractionZone
-MRUItem4=/Game/Blueprints/BP_CFPSCharacter
-MRUItem5=/Game/Blueprints/BP_CollectibleSphere
-MRUItem6=/Game/Maps/MainMenu
-MRUItem7=/Game/Blueprints/WBP_PauseMenu
-MRUItem8=/Game/Blueprints/WBP_GameOver1
-MRUItem9=/Game/Blueprints/BP_MazeGameMode2
-MRUItem10=/Game/Blueprints/WBP_MainMenu
-MRUItem11=/Game/Blueprints/WBP_Purpose
-MRUItem12=/Game/Blueprints/WBP_Crosshair
-MRUItem13=/Game/Blueprints/WBP_GameComplete
-MRUItem14=/Game/Blueprints/WBP_Credits
-MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem16=/Game/Blueprints/WBP_GameOver
-MRUItem17=/Game/Blueprints/WBP_PowerupCountdownText
-MRUItem18=/Game/Maps/PC_MainMenu
-MRUItem19=/Game/Powerups/BP_Powerup_Speed
+MRUItem0=/Game/Blueprints/WBP_Crosshair
+MRUItem1=/Game/Blueprints/BP_PoitsLeft
+MRUItem2=/Game/Blueprints/BP_ViewPoint
+MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem4=/Game/Blueprints/BP_Interface
+MRUItem5=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem6=/Game/Blueprints/BP_MazeGameMode2
+MRUItem7=/Game/Maps/TestLevel
+MRUItem8=/Game/Maps/MainMenu
+MRUItem9=/Game/Assets/BP_MyGameInstance
+MRUItem10=/Game/Blueprints/BP_CFPSCharacter
+MRUItem11=/Game/Powerups/BP_Powerup_Countdown
+MRUItem12=/Game/Powerups/BP_Powerup_Speed
+MRUItem13=/Game/Powerups/BP_PowerupSpeed_Pickup
+MRUItem14=/Game/Materials/M_SpawnBox_Inst
+MRUItem15=/Game/Blueprints/WBP_PauseMenu
+MRUItem16=/Game/Blueprints/WBP_GameOver1
+MRUItem17=/Game/Blueprints/WBP_MainMenu
+MRUItem18=/Game/Blueprints/WBP_Purpose
+MRUItem19=/Game/Blueprints/WBP_GameComplete
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2879,6 +2912,9 @@ MRUItem19=/Game/Powerups/BP_Powerup_Speed
 /Game/Blueprints/WBP_PauseMenu.WBP_PauseMenu=0
 /Game/Blueprints/WBP_GameOver1.WBP_GameOver1=1
 /Game/Materials/M_SpawnBox_Inst.M_SpawnBox_Inst=0
+/Game/Blueprints/BP_Interface.BP_Interface=0
+/Game/Assets/BP_MyGameInstance.BP_MyGameInstance=0
+/Game/Blueprints/BP_PoitsLeft.BP_PoitsLeft=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2943,7 +2979,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [WidgetTemplatesExpanded]
-Editor=True
+Editor=False
 Input=False
 Lists=False
 Misc=False
@@ -2954,6 +2990,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [MaterialEditor]
 PrimType=0
