--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode_C
+GameInstanceClass=/Game/Assets/BP_MyGameInstance.BP_MyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
